Support of file transfer (service to client) (#874)